[gd_scene load_steps=2 format=3 uid="uid://bor886767jrvk"]

[ext_resource type="Script" path="res://game.gd" id="1_8l278"]

[node name="game" type="Node2D"]
script = ExtResource("1_8l278")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1155.0
offset_bottom = 647.0

[node name="AddCookies" type="Button" parent="GUI"]
layout_mode = 0
offset_left = 74.0
offset_top = 322.0
offset_right = 515.0
offset_bottom = 393.0
text = "Dodaj ciasteczka"

[node name="CookiesValue" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 69.0
offset_top = 61.0
offset_right = 514.0
offset_bottom = 242.0
theme_override_font_sizes/font_size = 106
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Device Prince" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 691.0
offset_top = 78.0
offset_right = 803.0
offset_bottom = 130.0
text = "Koszt 
urządzenia"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Device Amount" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 816.0
offset_top = 78.0
offset_right = 896.0
offset_bottom = 130.0
text = "Ilość
posiadana"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Devices" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 693.0
offset_top = 13.0
offset_right = 1124.0
offset_bottom = 61.0
text = "Maszyny do zakupienia"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button" type="Button" parent="GUI"]
layout_mode = 0
offset_left = 914.0
offset_top = 132.0
offset_right = 1136.0
offset_bottom = 198.0
text = "Kup maszyne 
do ciastek"

[node name="CookiesMachineValue" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 823.0
offset_top = 139.0
offset_right = 895.0
offset_bottom = 196.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CookiesMachinePrince" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 708.0
offset_top = 138.0
offset_right = 789.0
offset_bottom = 199.0
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Buy_Skills" type="Button" parent="GUI"]
layout_mode = 0
offset_left = 699.0
offset_top = 560.0
offset_right = 1127.0
offset_bottom = 615.0
text = "Zakup umiejętności"

[connection signal="pressed" from="GUI/AddCookies" to="." method="_on_add_cookies_pressed"]
[connection signal="pressed" from="GUI/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GUI/Button_Buy_Skills" to="." method="_on_button_buy_skills_pressed"]
